feat: add helm chart for AKS

--- a/AKS/helm/ingress.yaml
+++ b/AKS/helm/ingress.yaml
@@ -3,11 +3,8 @@ kind: Ingress
 metadata:
   namespace: robot-shop
   name: robot-shop
-  annotations:
-    kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
 spec:
+  ingressClassName: azure-application-gateway
   rules:
     - http:
         paths:
