--- a/AKS/helm/values.yaml
+++ b/AKS/helm/values.yaml
@@ -55,7 +55,7 @@ ratings: {}
 
 redis:
   # Storage class to use with redis statefulset.
-  storageClassName: gp2
+  storageClassName: default
 
 shipping: {}
 
