--- a/AKS/helm/templates/redis-statefulset.yaml
+++ b/AKS/helm/templates/redis-statefulset.yaml
@@ -53,7 +53,7 @@ spec:
       spec:
         accessModes: [ "ReadWriteOnce" ]
         {{ if not .Values.openshift }}
-        storageClassName: gp2
+        storageClassName: default
         volumeMode: Filesystem
         {{ end }}
         resources:
