--- a/EKS/helm/templates/ratings-deploiyment.yaml
+++ b/EKS/helm/templates/ratings-deploiyment.yaml
@@ -1,45 +1,53 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb
+  name: ratings
   labels:
-    service: mongodb
+    service: ratings
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: mongodb
+      service: ratings
   template:
     metadata:
       labels:
-        service: mongodb
+        service: ratings
     spec:
       {{ if .Values.psp.enabled }}
       serviceAccountName: robot-shop
       {{ end }}
       containers:
-      - name: mongodb
-        image: {{ .Values.image.repo }}/rs-mongodb:{{ .Values.image.version }}
+      - name: ratings
+        image: {{ .Values.image.repo }}/rs-ratings:{{ .Values.image.version }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
-        - containerPort: 27017
+        - containerPort: 80
         resources:
           limits:
             cpu: 200m
-            memory: 200Mi
+            memory: 100Mi
           requests:
             cpu: 100m
-            memory: 100Mi
+            memory: 50Mi
+        readinessProbe:
+          httpGet:
+            path: /_health
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          failureThreshold: 30
+          successThreshold: 1
       restartPolicy: Always
-      {{- with .Values.mongodb.affinity }}
+      {{- with .Values.ratings.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.mongodb.nodeSelector }}
+      {{- with .Values.ratings.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.mongodb.tolerations }}
+      {{- with .Values.ratings.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
