--- a/EKS/helm/templates/cart-service.yaml
+++ b/EKS/helm/templates/cart-service.yaml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: user
-  labels:
-    service: user
+  name: cart
 spec:
   ports:
   - name: http
     port: 8080
     targetPort: 8080
   selector:
-    service: user
+    service: cart
