--- a/AKS/helm/templates/payment-service.yaml
+++ b/AKS/helm/templates/payment-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: shipping
+  name: payment
   labels:
-    service: shipping
+    service: payment
 spec:
   ports:
   - name: http
     port: 8080
     targetPort: 8080
   selector:
-    service: shipping
+    service: payment
