--- a/AKS/helm/templates/mysql-deployment.yaml
+++ b/AKS/helm/templates/mysql-deployment.yaml
@@ -1,46 +1,49 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rabbitmq
+  name: mysql
   labels:
-    service: rabbitmq
+    service: mysql
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: rabbitmq
+      service: mysql
   template:
     metadata:
       labels:
-        service: rabbitmq
+        service: mysql
     spec:
       {{ if .Values.psp.enabled }}
       serviceAccountName: robot-shop
       {{ end }}
       containers:
-      - name: rabbitmq
-        image: rabbitmq:3.7-management-alpine
+      - name: mysql
+        image: {{ .Values.image.repo }}/rs-mysql-db:{{ .Values.image.version }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        # added for Istio
+        securityContext:
+          capabilities:
+            add: ["NET_ADMIN"]
         ports:
-        - containerPort: 5672
-        - containerPort: 15672
+        - containerPort: 3306
         resources:
           limits:
             cpu: 200m
-            memory: 512Mi
+            memory: 1024Mi
           requests:
             cpu: 100m
-            memory: 256Mi
+            memory: 700Mi
       restartPolicy: Always
-      {{- with .Values.rabbitmq.affinity }}
+      {{- with .Values.mysql.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.rabbitmq.nodeSelector }}
+      {{- with .Values.mysql.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- with .Values.rabbitmq.tolerations }}
+      {{- with .Values.mysql.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
